// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip-basic 1`] = `
<div
  className="container"
>
  Title
</div>
`;

exports[`tooltip-custom-classname 1`] = `
<div
  className="test-class container"
>
  Title Tooltip
</div>
`;

exports[`tooltip-default-classname 1`] = `
<div
  className="container"
>
  Title Tooltip
</div>
`;
